[tool.poetry]
name = "home-assistant-frank_energie"
version = "2024.11.1"  # Initial version
description = "A custom Home Assistant integration for Frank Energie."
authors = ["RienduPre <Rien.duPRe@me.com"]  # Replace with your info

[tool.poetry.dependencies]
python = "^3.13"
python-frank-energie = { git = "https://github.com/RienduPre/python-frank-energie.git", rev = "main" }

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
