[tool.poetry]
name = "home-assistant-frank_energie"
version = "2025.4.11"
description = "A custom Home Assistant integration for Frank Energie."
authors = ["HiDiHo <hidiho@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
python-frank-energie = "^2025.4.11"

[tool.poetry.dev-dependencies]
pytest = "^8.3"
flake8 = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
